2007-07-26  Albert Chu <chu11@llnl.gov>

	* common/src/ipmi-sdr-cache.c (sdr_cache_load): Fix corner case bug.

	* freeipmi.spec.in: Fix buildroot typo. 
	
2007-07-18  Albert Chu <chu11@llnl.gov>

	* ipmi-chassis/ipmi-chassis.8.pre.in: Fix default priv level typo.

	* ipmi-sensors/ipmi-sensors.8.pre.in: Fix formatting typo.

	* ipmi-sel/ipmi-sel.8.pre.in: Fix examples.

	* ipmimonitoring/ipmimonitoring.8.in: Fix option instructions.

	* bmc-config/bmc-config.8.pre.in: Fix examples.
	
2007-07-17  Albert Chu <chu11@llnl.gov>

	* Various manpage typo fixes.
	
2007-07-13  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/src/libipmiconsole/ipmiconsole.h,
	ipmiconsole/src/libipmiconsole/ipmiconsole.c: Remove duplicate
	error code definition.
	
2007-07-12  Albert Chu <chu11@llnl.gov>

	* ipmimonitoring/src/ipmimonitoring/ipmimonitoring.c (main): Fix
	free bug.
	
2007-07-11  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/src/libipmiconsole/ipmiconsole_checks.c
	(ipmiconsole_check_outbound_sequence_number): Remove left over
	debugging.

	* ipmipower/ipmipower.conf.5.in: Update w/ forgotten options.

	* ipmiconsole/ipmiconsole.conf.5.in: Update w/ forgotten options.
	
2007-07-09  Dmitry Frolov <frolov@riss-telecom.ru>

	* acx_pthread.m4, common/src/freeipmi-portability.h,
	ipmidetect/Makefile.am,
	ipmimonitoring/src/libipmimonitoring/ipmi_monitoring_ipmi_communication.c:
	FreeBSD port fixes.

	* ac_ipmi_monitoring_sdr_cache_dir.m4: Fix typo.
	
2007-07-06  Albert Chu <chu11@llnl.gov>

	* ipmi-chassis/ipmi-chassis.8.pre.in,
	ipmi-chassis/src/ipmi-chassis-argp.c: Change -I option to -i.
	
2007-07-03  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/udm/ipmi-lan-interface-udm.c (ipmi_lan_cmd,
	ipmi_lan_cmd_raw): Fix return code bug.

	* libfreeipmi/src/udm/ipmi-udm.c,
	libfreeipmi/include/freeipmi/udm/ipmi-udm.h,
	common/src/udm-err-wrappers.h
	(__UDM_BAD_COMPLETION_CODE_TO_UDM_ERRNUM): Remove
	IPMI_ERR_BAD_COMPLETION_CODE_NODE_BUSY completion code.  Replace